# webgame

./: .gitignore  AGENTS.md  ChatGPTUnrealGuide.txt  README.md  build.bat  build.sh  build_cpp.bat  create_csv_for_unreal.py  data_integration.py  database.js  imgui.ini  index.html  materials.csv  merge_data.py  metals.csv  minerals.csv  package-lock.json  package.json  potion_ingredients.csv  real_world_properties.csv  script.js  shield_volumes.csv  siege_volumes.csv  simulator.html  start_server.bat  start_server.sh  style.css  textiles.csv  transform_data.py  verify_shield_crafting.py  verify_siege_crafting.py  vite.config.js  weapon_volumes.csv  woods.csv
cpp/: AlchemySystem.h  AscensionSystem.h  CMakeCache.txt  CMakeLists.txt  Character.h  CombatSystem.h  CraftingSystem.h  DataTypes.h  EnchantingSystem.h  Formulas.cpp  Formulas.h  ItemDatabase.cpp  ItemDatabase.h  Items.h  MagicSystem.h  Makefile  Material.cpp  Material.h  MovementSystem.h  ReputationSystem.cpp  ReputationSystem.h  SiegeSystem.h  build.bat  build.sh  cmake_install.cmake  database_viewer  database_viewer.cpp  game_data_viewer  game_data_viewer.cpp  game_simulator.cpp  item_database.json  test_alchemy.cpp  test_crafting.cpp
cpp/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/cpp/imgui/: imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h
cpp/imgui/: imconfig.h  imgui.h  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_internal.h  imstb_rectpack.h  imstb_truetype.h
jules-scratch/: consolidate_items.py  split_material_names.py  tier_materials.py
jules-scratch/verification/: verify_alchemy.py  verify_crafting.py  verify_crafting_page.py
public/: Master_Elemental_Metals.json  Master_Metal_Alloys.json  alchemy_recipes.json  armor_volumes.csv  armor_volumes.json  ascension.html  aspect_ratio.js  banned_names.txt  bone_properties.json  buildMaterialDB.js  carapace_properties.json  combat.html  crafting.html  crafting_calculator.js  cut_gemstones.json  database.js  database.json  db.json  enchantment_runes.csv  enchantment_runes.json  fur_properties.json  game_systems.html  index.html  item_categories.json  leather_properties.json  linen_properties.json  magic.html  materialCalculations.js  materials.html  materials.js  materials.json  materials_guide.html  materials_tiered.json  mechanical_limits.json  metal_hardness.json  movement.html  nav.html  nav.js  potion_ingredients.json  races.html  (+15 more)
public/constants/: armor.js  weapons.js
scripts/: addDefaultFactors.js  cleanAlloyData.js  estimateMetalStrength.js  fetchBrinell.js  populateFurFactors.js  populateLeatherFactors.js  populateMetalFactors.js  populateMetalMaterials.js  populateMetalProperties.js  populateMohsHardness.js  populateNaturalFactors.js  populateWoodProperties.js  setNonMetalFactors.js
src/: materialCalculations.js  simulator.jsx
src/components/: ArmorSelectionPanel.jsx  AttackDirectionPanel.jsx  CharacterPanel.jsx  MaterialSelect.jsx  RangedWeaponPanel.jsx  ResultsPanel.jsx  SimulatorContainer.jsx  Tooltip.jsx  WeaponAttackPanel.jsx
src/constants/: attack.js  simulator.js  weapons.js
src/hooks/: useLoadout.js  useMaterials.js
src/utils/: buildMaterialDB.js  clone.js  (+2 more)
tests/: buildMaterialDB.test.js  clone.test.js  database.test.js  materialCalculations.test.js  materialHelpers.test.js  test_shield_crafting_ui.py  test_siege_crafting_ui.py
